--- a/index.html
+++ b/index.html
@@ -11,11 +11,23 @@
     <meta property='og:image' content=''>
     <meta property='og:title' content=''>
     <meta property='og:description' content=''>
-    <title>Tic Tac Toe</title>
+    <title>Espadas</title>
     <link rel='stylesheet' href='style.css'>
     <link rel='shortcut icon' href='' type='image/x-icon'>
 </head>
     <body>
-        
+        <div class="topPage">
+            <img src="Logos/espadalogo1.png" alt="" id="logo">
+            <h1>We’re modern samurai</h1>
+        </div>
+        <nav>
+            <ul>
+                <li class="list"><p class="listNames">1</p></li>
+                <li class="list"><p class="listNames">2</p></li>
+                <li class="list"><p class="listNames">3</p></li>
+                <li class="list"><p class="listNames">4</p></li>
+            </ul>
+        </nav>
+
     </body>
 </html>
