--- a/index.html
+++ b/index.html
@@ -13,21 +13,35 @@
     <meta property='og:description' content=''>
     <title>Espadas</title>
     <link rel='stylesheet' href='style.css'>
-    <link rel='shortcut icon' href='' type='image/x-icon'>
+    <link rel='shortcut icon' href='Logos/espadalogo3.png' type='image/x-icon'>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@700&display=swap" rel="stylesheet">
 </head>
+
     <body>
         <div class="topPage">
-            <img src="Logos/espadalogo1.png" alt="" id="logo">
-            <h1>We’re modern samurai</h1>
+            <div class="background"></div>
+            <div class="sidebar">
+                <img class="sidebarButton" src="" alt="">
+            </div>
+            <img class="logo" src="Logos/espadalogo3.png" alt="" id="logo">
+            <h1>We’re Modern Samurai</h1>
         </div>
-        <nav>
-            <ul>
-                <li class="list"><p class="listNames">1</p></li>
-                <li class="list"><p class="listNames">2</p></li>
-                <li class="list"><p class="listNames">3</p></li>
-                <li class="list"><p class="listNames">4</p></li>
-            </ul>
-        </nav>
+        <section class="navbar">
+            <nav>
+                <ul>
+                    <li class="navbuttons">Home</li>
+                    <li class="navbuttons">Order</li>
+                    <li class="navbuttons">Reviews</li>
+                    <li class="navbuttons">Contact</li>
+                </ul>
+            </nav>
+        </section>
+        <section class="home">
+            <div class="homepage">
 
+            </div>
+        </section>
+    
     </body>
 </html>
