--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property='og:image' content=''>
     <meta property='og:title' content=''>
     <meta property='og:description' content=''>
-    <title>Tic Tac Toe</title>
+    <title></title>
     <link rel='stylesheet' href='style.css'>
     <link rel='shortcut icon' href='' type='image/x-icon'>
 </head>
