addded new pages

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -11,9 +11,9 @@
     <meta property='og:image' content=''>
     <meta property='og:title' content=''>
     <meta property='og:description' content=''>
-    <title>Espadas</title>
+    <title>Contacts</title>
     <link rel='stylesheet' href='style.css'>
-    <link rel='shortcut icon' href='Images/icon.png' type='image/x-icon'>
+    <link rel='shortcut icon' href='../Images/icon.png' type='image/x-icon'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@700&display=swap" rel="stylesheet">
 </head>
@@ -30,9 +30,9 @@
         <section class="navbar">
             <nav>
                 <ul>
-                    <li class="navbuttons"><a href="index.html">Home</a></li>
-                    <li class="navbuttons"><a href="booking/book.html">Book</a></li>
-                    <li class="navbuttons"><a href="contact/contact.html">Contact</a></li>
+                    <li class="navbuttons"><a href="../index.html">Home</a></li>
+                    <li class="navbuttons"><a href="../booking/book.html">Book</a></li>
+                    <li class="navbuttons"><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </section>
