--- a/booking/book.html
+++ b/booking/book.html
@@ -24,7 +24,7 @@
             <div class="sidebar">
                 <img class="sidebarButton" src="" alt="">
             </div>
-            <img class="logo" src="Images/icon.png" alt="" id="logo">
+            <img class="logo" src="../Images/icon.png" alt="" id="logo">
             <h1>We’re Modern Samurai</h1>
         </div>
         <section class="navbar">
@@ -32,6 +32,7 @@
                 <ul>
                     <li class="navbuttons"><a href="../index.html">Home</a></li>
                     <li class="navbuttons"><a href="book.html">Book</a></li>
+                    <li class="navbuttons"><a href="../services/services.html">Services</a></li>
                     <li class="navbuttons"><a href="../contact/contact.html">Contact</a></li>
                 </ul>
             </nav>
