--- a/services/services.html
+++ b/services/services.html
@@ -11,9 +11,9 @@
     <meta property='og:image' content=''>
     <meta property='og:title' content=''>
     <meta property='og:description' content=''>
-    <title>Booking</title>
-    <link rel='stylesheet' href='style.css'>
-    <link rel='shortcut icon' href='../Images/icon.png' type='image/x-icon'>
+    <title>Espadas</title>
+    <link rel='stylesheet' href='services.css'>
+    <link rel='shortcut icon' href='Images/icon.png' type='image/x-icon'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@700&display=swap" rel="stylesheet">
 </head>
@@ -22,23 +22,26 @@
         <div class="topPage">
             <div class="background"></div>
             <div class="sidebar">
-                <img class="sidebarButton" src="" alt="">
+                
             </div>
-            <img class="logo" src="../Images/icon.png" alt="" id="logo">
+            <img class="logo" src="Images/icon.png" alt="" id="logo">
             <h1>We’re Modern Samurai</h1>
         </div>
         <section class="navbar">
             <nav>
                 <ul>
-                    <li class="navbuttons"><a href="../index.html">Home</a></li>
-                    <li class="navbuttons"><a href="../booking/book.html">Book</a></li>
-                    <li class="navbuttons"><a href="services.html">Services</a></li>
-                    <li class="navbuttons"><a href="../contact/contact.html">Contact</a></li>
+                    <li class="navbuttons"><a href="index.html">Home</a></li>
+                    <li class="navbuttons"><a href="booking/book.html">Book</a></li>
+                    <li class="navbuttons"><a href="services/services.html">Services</a></li>
+                    <li class="navbuttons"><a href="contact/contact.html">Contact</a></li>
                 </ul>
             </nav>
         </section>
         <section class="home">
             <div class="homepage">
+                <div class="paragraph">
+                    <p>Aliqua veniam laboris eu labore ipsum aliquip pariatur eiusmod velit nulla eiusmod. Occaecat aute ipsum amet non tempor proident. Tempor culpa sint laboris pariatur dolore. Est sunt id labore incididunt ad do.</p>
+                </div>
 
             </div>
         </section>
