updating services page

--- a/services/services.html
+++ b/services/services.html
@@ -16,6 +16,8 @@
     <link rel='shortcut icon' href='Images/icon.png' type='image/x-icon'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&display=swap" rel="stylesheet">
 </head>
 
     <body>
@@ -25,7 +27,7 @@
                 
             </div>
             <img class="logo" src="Images/icon.png" alt="" id="logo">
-            <h1>We’re Modern Samurai</h1>
+            <h1 id="text">We’re Modern Samurai</h1>
         </div>
         <section class="navbar">
             <nav>
@@ -40,7 +42,7 @@
         <section class="home">
             <div class="homepage">
                 <div class="paragraph">
-                    <p>Aliqua veniam laboris eu labore ipsum aliquip pariatur eiusmod velit nulla eiusmod. Occaecat aute ipsum amet non tempor proident. Tempor culpa sint laboris pariatur dolore. Est sunt id labore incididunt ad do.</p>
+                    <h2>Services</h2>
                 </div>
 
             </div>
