--- a/services/services.html
+++ b/services/services.html
@@ -32,10 +32,10 @@
         <section class="navbar">
             <nav>
                 <ul>
-                    <li class="navbuttons"><a href="index.html">Home</a></li>
-                    <li class="navbuttons"><a href="booking/book.html">Book</a></li>
-                    <li class="navbuttons"><a href="services/services.html">Services</a></li>
-                    <li class="navbuttons"><a href="contact/contact.html">Contact</a></li>
+                    <li class="navbuttons"><a href="../index.html">Home</a></li>
+                    <li class="navbuttons"><a href="../booking/book.html">Book</a></li>
+                    <li class="navbuttons"><a href="services.html">Services</a></li>
+                    <li class="navbuttons"><a href="../contact/contact.html">Contact</a></li>
                 </ul>
             </nav>
         </section>
