--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="topPage">
             <div class="background"></div>
             <div class="sidebar">
-                <img class="sidebarButton" src="" alt="">
+                <button class="sidebarButton"></button>
             </div>
             <img class="logo" src="Images/icon.png" alt="" id="logo">
             <h1>We’re Modern Samurai</h1>
@@ -40,9 +40,11 @@
         <section class="home">
             <div class="homepage">
                 <div class="paragraph">
-                    <p>Aliqua veniam laboris eu labore ipsum aliquip pariatur eiusmod velit nulla eiusmod. Occaecat aute ipsum amet non tempor proident. Tempor culpa sint laboris pariatur dolore. Est sunt id labore incididunt ad do.</p>
-                </div>
-
+                    <p>Aliqua veniam laboris eu labore ipsum aliquip pariatur eiusmod velit nulla eiusmod. Occaecat aute ipsum amet non tempor proident. Tempor culpa sint laboris pariatur dolore. Est sunt id labore incididunt ad do. Aute commodo consequat est veniam velit commodo aliquip et sint reprehenderit reprehenderit. Nostrud ea do quis commodo eiusmod dolor fugiat irure. Non occaecat qui elit laboris veniam sit esse.Do eiusmod ullamco ea et aute aute. Ullamco consectetur consequat Lorem magna ad in occaecat veniam ex. Labore adipisicing cillum excepteur id qui anim pariatur quis minim consequat nisi.Adipisicing cillum ut reprehenderit esse aliqui minim laborum. Id sunt et occaecat consectetur minim culpa. Anim esse ea eu adipisicing. Minim deserunt excepteur incididunt cupidatat. Enim fugiat do et anim occaecat aliquip ex reprehenderit. Enim anim pariatur consequat exercitation esse consectetur et qui eiusmod esse qui esse pariatur tempor.Officia in eu reprehenderit mollit sunt anim voluptate. In sit cillum cupidatat sunt ad. Lorem qui aute magna voluptate. Do dolore amet excepteur ea nostrud reprehenderit.Veniam culpa est est aute id tempor nulla fugiat ullamco id magna. Qui velit do officia proident nostrud nostrud deserunt. Excepteur culpa exercitation eu voluptate irure Lorem velit adipisicing quis amet magna nisi reprehenderit do. In excepteur sint adipisicing id anim esse et duis aliqua sunt ex sint deserunt enim.Quis officia incididunt aliqua et non excepteur est eiusmod aliqua occaecat proident cillum. Laborum velit laborum reprehenderit velit sunt incididunt. Est ut sunt cillum sit elit consectetur duis occaecat anim reprehenderit et ipsum do.</p>
+            </div>
+            <div class="display">
+                            <img class="breathtaking" src="images/breathtakingly awesome.jpg" alt="">
+            <p>Deserunt non deserunt id dolore amet dolore et ullamco culpa. Ex minim elit ut nisi anim. Et ea laborum et consequat esse ullam fjds ex. Deserunt dolore commodo nostrud do ex. Sit reprehenderit sit ut anim deserunt exercitation consequat deserunt occaecat elit. Deserunt laboris adipisicing elit aute sint. Amet Lorem labore velit aliqua aliquip id exercitation sit est in.Laborum consequat nostrud consequat ullamco aute veniam qui dolore. Amet ad cillum excepteur laborum dolore. Pariatur eiusmod sint dolor cillum velit nisi. Occaecat magna ad sunt labore cillum. Pariatur voluptate laboris elit excepteur amet magna officia sint excepteur proident est minim ex. Quis ullamco laboris Lorem voluptate labore aute.</p>
             </div>
         </section>
     
