--- a/services/services.html
+++ b/services/services.html
@@ -50,11 +50,11 @@
     <footer>
         <div class="footer">
             <ul class="footer-items">
-                <li><a href=""><img src="Images/icon2.png" alt=""></a></li>
-                <li><a href="">Home</a></li>
-                <li><a href="">Book</a></li>
-                <li><a href="">Services</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#"><img src="Images/icon2.png" alt=""></a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Book</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
                 <p>6997 N Glen Harbor Blvd, Glendale, AZ 85307</p>
                 <p>(480)-987-654</p>
             </ul>
