--- a/services/services.html
+++ b/services/services.html
@@ -11,9 +11,9 @@
     <meta property='og:image' content=''>
     <meta property='og:title' content=''>
     <meta property='og:description' content=''>
-    <title>Espadas</title>
+    <title>Services</title>
     <link rel='stylesheet' href='services.css'>
-    <link rel='shortcut icon' href='Images/icon.png' type='image/x-icon'>
+    <link rel='shortcut icon' href='../Images/icon3.png' type='image/x-icon'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -28,10 +28,10 @@
         <section class="navbar">
             <nav>
                 <ul>
-                    <li class="navbuttons"><a href="index.html">Home</a></li>
-                    <li class="navbuttons"><a href="booking/book.html">Book</a></li>
-                    <li class="navbuttons"><a href="services/services.html">Services</a></li>
-                    <li class="navbuttons"><a href="contact/contact.html">Contact</a></li>
+                    <li class="navbuttons"><a href="../index.html">Home</a></li>
+                    <li class="navbuttons"><a href="../booking/book.html">Book</a></li>
+                    <li class="navbuttons"><a href="services.html">Services</a></li>
+                    <li class="navbuttons"><a href="../contact/contact.html">Contact</a></li>
                 </ul>
             </nav>
         </section>
@@ -50,7 +50,7 @@
     <footer>
         <div class="footer">
             <ul class="footer-items">
-                <li><a href="#"><img src="Images/icon2.png" alt=""></a></li>
+                <li><a href="#"><img src="Images/icon1.png" alt=""></a></li>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Book</a></li>
                 <li><a href="#">Services</a></li>
