--- a/contact/contact.html
+++ b/contact/contact.html
@@ -13,7 +13,7 @@
     <meta property='og:description' content=''>
     <title>Contacts</title>
     <link rel='stylesheet' href='style.css'>
-    <link rel='shortcut icon' href='../Images/icon.png' type='image/x-icon'>
+    <link rel='shortcut icon' href='../Images/icon3.png' type='image/x-icon'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@700&display=swap" rel="stylesheet">
 </head>
@@ -22,9 +22,9 @@
         <div class="topPage">
             <div class="background"></div>
             <div class="sidebar">
-                <img class="sidebarButton" src="" alt="">
+                <button class="sidebarButton" src="" alt=""></button>
             </div>
-            <img class="logo" src="../Images/icon.png" alt="" id="logo">
+            <img class="logo" src="../Images/icon3.png" alt="" id="logo">
             <h1>We’re Modern Samurai</h1>
         </div>
         <section class="navbar">
