contact page WIP

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -37,12 +37,27 @@
         </section>
         <section class="home">
             <div class="homepage">
-                <div class="paragraph">
-                    <p>Aliqua veniam laboris eu labore ipsum aliquip pariatur eiusmod velit nulla eiusmod. Occaecat aute ipsum amet non tempor proident. Tempor culpa sint laboris pariatur dolore. Est sunt id labore incididunt ad do. Aute commodo consequat est veniam velit commodo aliquip et sint reprehenderit reprehenderit. Nostrud ea do quis commodo eiusmod dolor fugiat irure. Non occaecat qui elit laboris veniam sit esse.Do eiusmod ullamco ea et aute aute. Ullamco consectetur consequat Lorem magna ad in occaecat veniam ex. Labore adipisicing cillum excepteur id qui anim pariatur quis minim consequat nisi.Adipisicing cillum ut reprehenderit esse aliqui minim laborum. Id sunt et occaecat consectetur minim culpa. Anim esse ea eu adipisicing. Minim deserunt excepteur incididunt cupidatat. Enim fugiat do et anim occaecat aliquip ex reprehenderit. Enim anim pariatur consequat exercitation esse consectetur et qui eiusmod esse qui esse pariatur tempor.Officia in eu reprehenderit mollit sunt anim voluptate. In sit cillum cupidatat sunt ad. Lorem qui aute magna voluptate. Do dolore amet excepteur ea nostrud reprehenderit.Veniam culpa est est aute id tempor nulla fugiat ullamco id magna. Qui velit do officia proident nostrud nostrud deserunt. Excepteur culpa exercitation eu voluptate irure Lorem velit adipisicing quis amet magna nisi reprehenderit do. In excepteur sint adipisicing id anim esse et duis aliqua sunt ex sint deserunt enim.Quis officia incididunt aliqua et non excepteur est eiusmod aliqua occaecat proident cillum. Laborum velit laborum reprehenderit velit sunt incididunt. Est ut sunt cillum sit elit consectetur duis occaecat anim reprehenderit et ipsum do.</p>
+                <div class="positions">
+                    <h2>Want to apply? Here are the positions we offer:</h2><br>
+                    <p>Alarm Specialist:<br>-18 and older<br>-GED or high school diploma<br>-Background check no criminal history</p>
             </div>
-            <div class="display">
-                            <img class="breathtaking" src="../images/breathtakingly awesome.jpg" alt="">
-            <p>Deserunt non deserunt id dolore amet dolore et ullamco culpa. Ex minim elit ut nisi anim. Et ea laborum et consequat esse ullam fjds ex. Deserunt dolore commodo nostrud do ex. Sit reprehenderit sit ut anim deserunt exercitation consequat deserunt occaecat elit. Deserunt laboris adipisicing elit aute sint. Amet Lorem labore velit aliqua aliquip id exercitation sit est in.Laborum consequat nostrud consequat ullamco aute veniam qui dolore. Amet ad cillum excepteur laborum dolore. Pariatur eiusmod sint dolor cillum velit nisi. Occaecat magna ad sunt labore cillum. Pariatur voluptate laboris elit excepteur amet magna officia sint excepteur proident est minim ex. Quis ullamco laboris Lorem voluptate labore aute.</p>
+            <div class="feedback">
+                    <textarea placeholder="Have some feedback? Tell us!" cols="60" rows="5"></textarea>
+                    <p>We pride ourselves in our high standards of conduct taken from the ancient samurai codes called Bushido.</p><br>
+                    <h2>Integrity</h2><hr>
+                    <p>We know that ultimately the only person that can make someone do the right thing is themselves.</p>
+                    <h2>Respect</h2><hr>
+                    <p>Our bodyguards are respectful of everybody and their personal rights and always consider the dignity of the people they interact with as important.</p>
+                    <h2>Courage</h2><hr>
+                    <p>Being a bodyguard isn't always safe, our guards are trained to protect you no matter how dangerous the situation gets.</p>
+                    <h2>Honor</h2><hr>
+                    <p>We make sure our bodyguards have a strong sense of honor because you can’t expect someone to respect others if they don’t respect themselves.</p>
+                    <h2>Compassion</h2><hr>
+                    <p>Compassion is an essential part of being a bodyguard, at Espada we understand that you may be going through a stressful time when you hire us so we make a point of being sure that all of our guards are understanding and sensitive to your needs.</p>
+                    <h2>Honesty</h2><hr>
+                    <p>We pride ourselves on being honest, we will always inform you of, and be truthful about, the risks you face so you can make informed decisions.</p>
+                    <h2>Loyalty</h2><hr>
+                    <p>Espada is dedicated to finishing the job no matter how long it takes or what the risks are.</p>
             </div>
         </section>
     
