added image colors

--- a/services/services.html
+++ b/services/services.html
@@ -70,6 +70,16 @@
                         </ul>
                     </div>
                 </div>
+                <div class="price-box extra">
+                    <h3 id="platnium">Add on's</h3>
+                    <ul>
+                        <li>- Alarms</li>
+                        <li>- Cameras</li>
+                        <li>- Smart locks</li>
+                        <li>- Armed Security guards</li>
+                        <li>- Specialized trained guards</li>
+                    </ul>
+                </div>
             </div>
         </section>
     
