linked up footer to other pages

--- a/index.html
+++ b/index.html
@@ -38,11 +38,16 @@
         <section class="home">
             <div class="homepage">
                 <div class="paragraph">
-                    <p>Aliqua veniam laboris eu labore ipsum aliquip pariatur eiusmod velit nulla eiusmod. Occaecat aute ipsum amet non tempor proident. Tempor culpa sint laboris pariatur dolore. Est sunt id labore incididunt ad do. Aute commodo consequat est veniam velit commodo aliquip et sint reprehenderit reprehenderit. Nostrud ea do quis commodo eiusmod dolor fugiat irure. Non occaecat qui elit laboris veniam sit esse.Do eiusmod ullamco ea et aute aute. Ullamco consectetur consequat Lorem magna ad in occaecat veniam ex. Labore adipisicing cillum excepteur id qui anim pariatur quis minim consequat nisi.Adipisicing cillum ut reprehenderit esse aliqui minim laborum. Id sunt et occaecat consectetur minim culpa. Anim esse ea eu adipisicing. Minim deserunt excepteur incididunt cupidatat. Enim fugiat do et anim occaecat aliquip ex reprehenderit. Enim anim pariatur consequat exercitation esse consectetur et qui eiusmod esse qui esse pariatur tempor.Officia in eu reprehenderit mollit sunt anim voluptate. In sit cillum cupidatat sunt ad. Lorem qui aute magna voluptate. Do dolore amet excepteur ea nostrud reprehenderit.Veniam culpa est est aute id tempor nulla fugiat ullamco id magna. Qui velit do officia proident nostrud nostrud deserunt. Excepteur culpa exercitation eu voluptate irure Lorem velit adipisicing quis amet magna nisi reprehenderit do. In excepteur sint adipisicing id anim esse et duis aliqua sunt ex sint deserunt enim.Quis officia incididunt aliqua et non excepteur est eiusmod aliqua occaecat proident cillum. Laborum velit laborum reprehenderit velit sunt incididunt. Est ut sunt cillum sit elit consectetur duis occaecat anim reprehenderit et ipsum do.</p>
+                    <h3 class="about">About us</h3>
+                    <p class="aboutsection">Espada was founded in 1981 when our CEO Lorenzo Martinez realized the need for reputable private security services in his home state of Arizona, as a martial arts expert he was well acquainted with Bushido which is the samurai code of honor and used it as the foundation for training Espada bodyguards who work hard and never quit. The idea for the company came to Martinez while he was training in Kendo, the Japanese martial art of sword fighting, so he named the company Espada.
+                    </p>
+                    <p class="overview">
+                        We offer scalable security solutions for our clients and offer highly trained bodyguards for high profile individuals. Unique to Espada is that we have specialized  bodyguards that are duel trained in other professions (Butlers, Chauffeurs, and Emergency Medical Technicians) to give you a seamless and non intrusive integration of security into your life. We also have self defence training classes for those who prefer to have a more direct control over their safety.
+                    </p>
             </div>
             <div class="display">
-                            <img class="breathtaking" src="images/breathtakingly awesome.jpg" alt="">
-            <p>Deserunt non deserunt id dolore amet dolore et ullamco culpa. Ex minim elit ut nisi anim. Et ea laborum et consequat esse ullam fjds ex. Deserunt dolore commodo nostrud do ex. Sit reprehenderit sit ut anim deserunt exercitation consequat deserunt occaecat elit. Deserunt laboris adipisicing elit aute sint. Amet Lorem labore velit aliqua aliquip id exercitation sit est in.Laborum consequat nostrud consequat ullamco aute veniam qui dolore. Amet ad cillum excepteur laborum dolore. Pariatur eiusmod sint dolor cillum velit nisi. Occaecat magna ad sunt labore cillum. Pariatur voluptate laboris elit excepteur amet magna officia sint excepteur proident est minim ex. Quis ullamco laboris Lorem voluptate labore aute.</p>
+                <img class="cat" src="images/cat.png" alt="">
+                <p class="catdes">This cat approves</p>
             </div>
         </section>
     
@@ -50,11 +55,11 @@
     <footer>
         <div class="footer">
             <ul class="footer-items">
-                <li><a href="#"><img src="Images/icon1.png" alt=""></a></li>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Book</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html"><img src="Images/icon1.png" alt=""></a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="booking/book.html">Book</a></li>
+                <li><a href="services/services.html">Services</a></li>
+                <li><a href="contact/contact.html">Contact</a></li>
                 <p>6997 N Glen Harbor Blvd, Glendale, AZ 85307</p>
                 <p>(480)-987-654</p>
             </ul>
