--- a/services/services.html
+++ b/services/services.html
@@ -77,11 +77,11 @@
     <footer>
         <div class="footer">
             <ul class="footer-items">
-                <li><a href="#"><img src="Images/icon1.png" alt=""></a></li>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Book</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="../index.html"><img src="Images/icon1.png" alt=""></a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../booking/book.html">Book</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="../contact/contact.html">Contact</a></li>
                 <p>6997 N Glen Harbor Blvd, Glendale, AZ 85307</p>
                 <p>(480)-987-654</p>
             </ul>
