--- a/services/services.html
+++ b/services/services.html
@@ -48,6 +48,7 @@
                             <li>- Alarms</li>
                             <li>- Cameras</li>
                             <li>- Smart locks</li>
+                            <li><img src="Images/silver.png" alt=""></li>
                         </ul>
                     </div>
                     <div class="price-box gold">
@@ -57,6 +58,7 @@
                             <li>- Cameras</li>
                             <li>- Smart locks</li>
                             <li>- Security guards</li>
+                            <li><img style="margin-top: 25px;" src="Images/gold.png" alt=""></li>
                         </ul>
                     </div>
                     <div class="price-box platnium">
@@ -67,11 +69,12 @@
                             <li>- Smart locks</li>
                             <li>- Armed Security guards</li>
                             <li>- Specialized trained guards</li>
+                            <li><img src="Images/plat.png" alt=""></li>
                         </ul>
                     </div>
                 </div>
                 <div class="price-box extra">
-                    <h3 id="platnium">Add on's</h3>
+                    <h3 id="">Add on's</h3>
                     <ul>
                         <li>- Alarms</li>
                         <li>- Cameras</li>
@@ -79,6 +82,9 @@
                         <li>- Armed Security guards</li>
                         <li>- Specialized trained guards</li>
                     </ul>
+                </div>
+                <div class="order-button">
+                    <button type="button">ORDER</button>
                 </div>
             </div>
         </section>
