contact page content

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -40,6 +40,9 @@
                 <div class="positions">
                     <h2>Want to apply? Here are the positions we offer:</h2><br>
                     <p>Alarm Specialist:<br>-18 and older<br>-GED or high school diploma<br>-Background check no criminal history</p>
+                    <p>Security Guard:<br>-21 and older<br>-GED or high school diploma<br>-Background chek no criminal history<br>-Guard card</nr></p>
+                    <p>Specialized Bodyguards:<br>-21 and older<br>-2 years of working experience<br>-GED or diploma<br>-Background check no criminal history<br>-Guard card<br>-Valid driver's license<br>-Willingness to be trained in specialties<br>-medical<br>-mechanic</p>
+                    <p>Self Defense Instructor:<br>-25 and older<br>-Background check no criminal history<br>-Letter of recommendation from current military or police officer<br>-3 day, 30 hour program</p>
             </div>
             <div class="feedback">
                     <textarea placeholder="Have some feedback? Tell us!" cols="60" rows="5"></textarea>
