--- a/index.html
+++ b/index.html
@@ -21,20 +21,33 @@
 </head>
 
     <body>
+        <section class="navbar">
+            <nav>
+                <ul>
+                    <li class="navbuttons"><a href="index.html">
+                        <span class="icon"><img class="awesome" src="images/breathtakingly awesome.jpg" alt=""></span>
+                        <span class="name">Home</span>
+                    </a></li>
+                    <li class="navbuttons"><a href="booking/book.html">
+                        <span class="icon"><img class="awesome" src="images/breathtakingly awesome.jpg" alt=""></span>
+                        <span class="name">Book</span>
+                    </a></li>
+                    <li class="navbuttons"><a href="services/services.html">
+                        <span class="icon"><img class="awesome" src="images/breathtakingly awesome.jpg" alt=""></span>
+                        <span class="name">Services</span>
+                    </a></li>
+                    <li class="navbuttons"><a href="contact/contact.html">
+                        <span class="icon"><img class="awesome" src="images/breathtakingly awesome.jpg" alt=""></span>
+                        <span class="name">Contacts</span>
+                    </a></li>
+                </ul>
+            </nav>
+        </section>
         <div class="topPage">
             <div class="background"></div>
             <img class="logo" src="Images/icon1.png" alt="" id="logo">
         </div>
-        <section class="navbar">
-            <nav>
-                <ul>
-                    <li class="navbuttons"><a href="index.html">Home</a></li>
-                    <li class="navbuttons"><a href="booking/book.html">Book</a></li>
-                    <li class="navbuttons"><a href="services/services.html">Services</a></li>
-                    <li class="navbuttons"><a href="contact/contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </section>
+
         <section class="home">
             <div class="homepage">
                 <div class="paragraph">
