--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
             <nav>
                 <ul>
                     <li class="navbuttons"><a href="index.html">
-                        <span class="icon"><img class="awesome" src="images/breathtakingly awesome.jpg" alt=""></span>
+                        <span class="icon"><img class="awesome" src="images/Home.png" alt=""></span>
                         <span class="name">Home</span>
                     </a></li>
                     <li class="navbuttons"><a href="booking/book.html">
-                        <span class="icon"><img class="awesome" src="images/breathtakingly awesome.jpg" alt=""></span>
+                        <span class="icon"><img class="awesome" src="images/Home.png" alt=""></span>
                         <span class="name">Book</span>
                     </a></li>
                     <li class="navbuttons"><a href="services/services.html">
-                        <span class="icon"><img class="awesome" src="images/breathtakingly awesome.jpg" alt=""></span>
+                        <span class="icon"><img class="awesome" src="images/Home.png" alt=""></span>
                         <span class="name">Services</span>
                     </a></li>
                     <li class="navbuttons"><a href="contact/contact.html">
-                        <span class="icon"><img class="awesome" src="images/breathtakingly awesome.jpg" alt=""></span>
+                        <span class="icon"><img class="awesome" src="images/Home.png" alt=""></span>
                         <span class="name">Contacts</span>
                     </a></li>
                 </ul>
@@ -69,12 +69,12 @@
         <div class="footer">
             <ul class="footer-items">
                 <li><a href="index.html"><img src="Images/icon1.png" alt=""></a></li>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="booking/book.html">Book</a></li>
-                <li><a href="services/services.html">Services</a></li>
-                <li><a href="contact/contact.html">Contact</a></li>
-                <p>6997 N Glen Harbor Blvd, Glendale, AZ 85307</p>
-                <p>(480)-987-654</p>
+                <li class="items"><a href="index.html">Home</a></li>
+                <li class="items"><a href="booking/book.html">Book</a></li>
+                <li class="items"><a href="services/services.html">Services</a></li>
+                <li class="items"><a href="contact/contact.html">Contact</a></li>
+                <p class="items">6997 N Glen Harbor Blvd, Glendale, AZ 85307</p>
+                <p class="items">(480)-987-654</p>
             </ul>
         </div>
     </footer>
