--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
                         <span class="name">Home</span>
                     </a></li>
                     <li class="navbuttons"><a href="booking/book.html">
-                        <span class="icon"><img class="awesome" src="images/Home.png" alt=""></span>
+                        <span class="icon"><img class="awesome" src="images/book.png" alt=""></span>
                         <span class="name">Book</span>
                     </a></li>
                     <li class="navbuttons"><a href="services/services.html">
-                        <span class="icon"><img class="awesome" src="images/Home.png" alt=""></span>
+                        <span class="icon"><img class="awesome" src="images/services.png" alt=""></span>
                         <span class="name">Services</span>
                     </a></li>
                     <li class="navbuttons"><a href="contact/contact.html">
-                        <span class="icon"><img class="awesome" src="images/Home.png" alt=""></span>
+                        <span class="icon"><img class="awesome" src="images/Contact.png" alt=""></span>
                         <span class="name">Contacts</span>
                     </a></li>
                 </ul>
