--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
             <nav>
                 <ul>
                     <li class="navbuttons"><a href="index.html">
-                        <span class="icon"><img class="awesome" src="images/Home.png" alt=""></span>
+                        <span class="icon"><img class="awesome" src="Images/Home.png" alt=""></span>
                         <span class="name">Home</span>
                     </a></li>
                     <li class="navbuttons"><a href="booking/book.html">
-                        <span class="icon"><img class="awesome" src="images/book.png" alt=""></span>
+                        <span class="icon"><img class="awesome" src="Images/book.png" alt=""></span>
                         <span class="name">Book</span>
                     </a></li>
                     <li class="navbuttons"><a href="services/services.html">
-                        <span class="icon"><img class="awesome" src="images/services.png" alt=""></span>
+                        <span class="icon"><img class="awesome" src="Images/services.png" alt=""></span>
                         <span class="name">Services</span>
                     </a></li>
                     <li class="navbuttons"><a href="contact/contact.html">
-                        <span class="icon"><img class="awesome" src="images/Contact.png" alt=""></span>
+                        <span class="icon"><img class="awesome" src="Images/Contact.png" alt=""></span>
                         <span class="name">Contacts</span>
                     </a></li>
                 </ul>
@@ -59,7 +59,7 @@
                     </p>
             </div>
             <div class="display">
-                <img class="cat" src="images/cat.png" alt="">
+                <img class="cat" src="Images/cat.png" alt="">
                 <p class="catdes">This cat approves</p>
             </div>
         </section>
