cleared homepage for updated content and arrangment

--- a/index.html
+++ b/index.html
@@ -50,17 +50,9 @@
 
         <section class="home">
             <div class="homepage">
-                <div class="paragraph">
-                    <h3 class="about">About us</h3>
-                    <p class="aboutsection">Espada was founded in 1981 when our CEO Lorenzo Martinez realized the need for reputable private security services in his home state of Arizona, as a martial arts expert he was well acquainted with Bushido which is the samurai code of honor and used it as the foundation for training Espada bodyguards who work hard and never quit. The idea for the company came to Martinez while he was training in Kendo, the Japanese martial art of sword fighting, so he named the company Espada.
-                    </p>
-                    <p class="overview">
-                        We offer scalable security solutions for our clients and offer highly trained bodyguards for high profile individuals. Unique to Espada is that we have specialized  bodyguards that are duel trained in other professions (Butlers, Chauffeurs, and Emergency Medical Technicians) to give you a seamless and non intrusive integration of security into your life. We also have self defence training classes for those who prefer to have a more direct control over their safety.
-                    </p>
-            </div>
-            <div class="display">
-                <img class="cat" src="Images/cat.png" alt="">
-                <p class="catdes">This cat approves</p>
+                <div class="welcome-text">
+                    <h2 id="welcome-heading">Welcome to Espada</h2>
+                </div>
             </div>
         </section>
     
