--- a/services/services.html
+++ b/services/services.html
@@ -90,7 +90,7 @@
                     </ul>
                 </div>
                 <div class="order-button">
-                    <button type="button">ORDER</button>
+                    <a href="../booking/book.html"><button type="button">ORDER</button></a>
                 </div>
             </div>
         </section>
