--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </a></li>
                     <li class="navbuttons"><a href="contact/contact.html">
                         <span class="icon"><img class="awesome" src="Images/Contact.png" alt=""></span>
-                        <span class="name">Contacts</span>
+                        <span class="name">Contact</span>
                     </a></li>
                 </ul>
             </nav>
