--- a/contact/contact.html
+++ b/contact/contact.html
@@ -21,20 +21,32 @@
 </head>
 
     <body>
+        <section class="navbar">
+            <nav>
+                <ul>
+                    <li class="navbuttons"><a href="../index.html">
+                        <span class="icon"><img class="awesome" src="../Images/Home.png" alt=""></span>
+                        <span class="name">Home</span>
+                    </a></li>
+                    <li class="navbuttons"><a href="../booking/book.html">
+                        <span class="icon"><img class="awesome" src="../Images/book.png" alt=""></span>
+                        <span class="name">Book</span>
+                    </a></li>
+                    <li class="navbuttons"><a href="../services/services.html">
+                        <span class="icon"><img class="awesome" src="../Images/services.png" alt=""></span>
+                        <span class="name">Services</span>
+                    </a></li>
+                    <li class="navbuttons"><a href="contact.html">
+                        <span class="icon"><img class="awesome" src="../Images/Contact.png" alt=""></span>
+                        <span class="name">Contact</span>
+                    </a></li>
+                </ul>
+            </nav>
+        </section>
         <div class="topPage">
             <div class="background"></div>
             <img class="logo" src="../Images/icon1.png" alt="" id="logo">
         </div>
-        <section class="navbar">
-            <nav>
-                <ul>
-                    <li class="navbuttons"><a href="../index.html">Home</a></li>
-                    <li class="navbuttons"><a href="../booking/book.html">Book</a></li>
-                    <li class="navbuttons"><a href="../services/services.html">Services</a></li>
-                    <li class="navbuttons"><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </section>
         <section class="home">
             <div class="homepage">
                 <div class="positions">
@@ -69,12 +81,12 @@
         <div class="footer">
             <ul class="footer-items">
                 <li><a href="../index.html"><img src="../Images/icon1.png" alt=""></a></li>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../booking/book.html">Book</a></li>
-                <li><a href="../services/services.html">Services</a></li>
-                <li><a href="../contact/contact.html">Contact</a></li>
-                <p>6997 N Glen Harbor Blvd, Glendale, AZ 85307</p>
-                <p>(480)-987-654</p>
+                <li class="items"><a href="../index.html">Home</a></li>
+                <li class="items"><a href="../booking/book.html">Book</a></li>
+                <li class="items"><a href="../services/services.html">Services</a></li>
+                <li class="items"><a href="../contact/contact.html">Contact</a></li>
+                <p class="items">6997 N Glen Harbor Blvd, Glendale, AZ 85307</p>
+                <p class="items">(480)-987-654</p>
             </ul>
         </div>
     </footer>
