--- a/booking/book.html
+++ b/booking/book.html
@@ -28,10 +28,22 @@
         <section class="navbar">
             <nav>
                 <ul>
-                    <li class="navbuttons"><a href="../index.html">Home</a></li>
-                    <li class="navbuttons"><a href="book.html">Book</a></li>
-                    <li class="navbuttons"><a href="../services/services.html">Services</a></li>
-                    <li class="navbuttons"><a href="../contact/contact.html">Contact</a></li>
+                    <li class="navbuttons"><a href="../index.html">
+                        <span class="icon"><img class="awesome" src="../Images/Home.png" alt=""></span>
+                        <span class="name">Home</span>
+                    </a></li>
+                    <li class="navbuttons"><a href="book.html">
+                        <span class="icon"><img class="awesome" src="../Images/book.png" alt=""></span>
+                        <span class="name">Book</span>
+                    </a></li>
+                    <li class="navbuttons"><a href="../services/services.html">
+                        <span class="icon"><img class="awesome" src="../Images/services.png" alt=""></span>
+                        <span class="name">Services</span>
+                    </a></li>
+                    <li class="navbuttons"><a href="../contact/contact.html">
+                        <span class="icon"><img class="awesome" src="../Images/Contact.png" alt=""></span>
+                        <span class="name">Contact</span>
+                    </a></li>
                 </ul>
             </nav>
         </section>
@@ -39,19 +51,6 @@
             <div class="homepage">
                 <div class="paragraph">
                     <p>
-                        <script type="text/javascript">
-                        function UpdateCost() {
-                            var sum = 0;
-                            var gn, elem;
-                            for (i=0; i<4; i++) {
-                            gn = 'game'+i;
-                            elem = document.getElementById(gn);
-                            if (elem.checked == true) { sum += Number(elem.value); }
-                            }
-                            document.getElementById('totalcost').value = sum.toFixed(2);
-                    
-                        }
-                    </script>
                     </head>
                     
                     <body>
@@ -94,13 +93,14 @@
         <div class="footer">
             <ul class="footer-items">
                 <li><a href="../index.html"><img src="../Images/icon1.png" alt=""></a></li>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="book.html">Book</a></li>
-                <li><a href="../services/services.html">Services</a></li>
-                <li><a href="../contact/contact.html">Contact</a></li>
-                <p>6997 N Glen Harbor Blvd, Glendale, AZ 85307</p>
-                <p>(480)-987-654</p>
+                <li class="items"><a href="../index.html">Home</a></li>
+                <li class="items"><a href="book.html">Book</a></li>
+                <li class="items"><a href="../services/services.html">Services</a></li>
+                <li class="items"><a href="../contact/contact.html">Contact</a></li>
+                <p class="items">6997 N Glen Harbor Blvd, Glendale, AZ 85307</p>
+                <p class="items">(480)-987-654</p>
             </ul>
         </div>
     </footer>
+    <script src="book.js"></script>
 </html>
