fixed homepage and completed it

--- a/index.html
+++ b/index.html
@@ -52,6 +52,29 @@
             <div class="homepage">
                 <div class="welcome-text">
                     <h2 id="welcome-heading">Welcome to Espada</h2>
+                    <p>“We are the modern Samurai”</p>
+                    <div class="box-wrap">
+                        <div class="box-1">
+                            <img class="book-img" src="images/book.png" alt="">
+                            <h3 id="box-header">Booking</h3>
+                            <p class="box-1-text">On our Booking page you can view an estimated price and ad on's calculated onto a form. From there you may send a message to Espada's Service Department where they will process your order and send an estimate. They may have additional processing fee's and cost for meetings. Check out the booking page for more information!</p>
+                            <div class="order-button">
+                                <a href="../booking/book.html"><button type="button">BOOK</button></a>
+                            </div>
+                        </div>
+                        <div class="box-1">
+                            <img class="book-img" src="images/services.png" alt="">
+                            <h3 id="box-header">Services</h3>
+                            <p style="padding-bottom: 35px;" class="box-1-text">View Espada's many service packages that we offer! Premium Packages including Silver, Gold, and Platnium with additional ad on's that are optional. Click the button below to view more details and specifacations about our services</p>
+                            <div class="order-button">
+                                <a href="../booking/book.html"><button id="wide-button" type="button">SERVICES</button></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="about">
+                        <h3 style="margin-top: 5px;" id="box-header">About</h3>
+                        <p id="about-text">Espada was founded in Tucson Arizona in 1981 and has been proudly serving the state of Arizona ever since, we offer scalable security solutions for our clients and offer highly trained bodyguards for high profile individuals. Unique to Espada is that we have specialized  bodyguards that are duel trained in other professions (Butlers, Chauffeurs, and Emergency Medical Technicians) to give you a seamless and non intrusive integration of security into your life. We also have self defence training classes for those who prefer to have a more direct control over their safety.</p>
+                    </div>
                 </div>
             </div>
         </section>
